package edu.austral.ingsis.clifford;

public interface Commands {
  String execute(FileSystem fileSystemComponent, String args);
}
